--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "^2.19.1",
+    "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.4.0",
+    "knew": "^0.0.0",
+    "knex": "^0.21.15",
+    "micro": "^9.3.4",
     "next": "10.0.4",
+    "pg": "^8.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
